# fertimap

./: CITATION.cff  README.md  constants.py  pyproject.toml
examples/: basic_usage.py  batch_with_column_mapping.py  custom_targets.py  user_workflow.py
src/fertimap/: __init__.py  cli.py  client.py  constants.py  exceptions.py  models.py  parsers.py  session.py  utils.py
src/fertimap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_client.py  test_parsers.py  test_utils.py
