[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fertimap"
version = "0.3.0"
description = "FertiMap is a production-friendly Python client for querying site-specific NPK fertilizer recommendations from FertiMap.ma for Moroccan field locations."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Abdelghani Belgaid"},
  {name = "Zakaria Mahmoud"}
]
keywords = ["agriculture", "fertimap", "fertilizer", "site-specific", "npk recommendations", "morocco"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "beautifulsoup4>=4.12",
  "pandas>=1.5",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[project.urls]
Homepage = "https://github.com/abdelghanibelgaid/fertimap"
Repository = "https://github.com/abdelghanibelgaid/fertimap"
Issues = "https://github.com/abdelghanibelgaid/fertimap/issues"

[project.scripts]
fertimap = "fertimap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
fertimap = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -p no:cacheprovider"
testpaths = ["tests"]
